# VSTest

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
Source/: ChordNameUtils.h  MyLookAndFeel.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SynthVoice.cpp  SynthVoice.h
